Fixed landing page taking up too much space

--- a/src/Screens/IndividualServicePage/ServiceLanding/ServiceLanding.css
+++ b/src/Screens/IndividualServicePage/ServiceLanding/ServiceLanding.css
@@ -2,7 +2,6 @@
     z-index: 0;
     position: relative;
     background-color: rgb(255, 255, 255);
-    height: 200vh;
     width: 100vw;
     min-width: 100%;
 }
@@ -37,7 +36,11 @@
     position: relative;
     width: 100%;
     aspect-ratio: 1.476923;
-    background-image: linear-gradient(90deg, rgba(238,28,9,0.8) 0%, rgba(250,177,4,0.8) 100%),
+    background-image: linear-gradient(
+            90deg,
+            rgba(238, 28, 9, 0.8) 0%,
+            rgba(250, 177, 4, 0.8) 100%
+        ),
         url(../../../img/oras.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -72,15 +75,13 @@
     z-index: 1;
     top: 120px;
     width: 50%;
-    left:20px;
+    left: 20px;
 }
-.service-page-landing-container .title-container h1{
-
+.service-page-landing-container .title-container h1 {
     letter-spacing: 1px;
-  
 }
-@media(min-width: 700px) {
-    .service-page-landing-container .title-container h1{
+@media (min-width: 700px) {
+    .service-page-landing-container .title-container h1 {
         font-size: 50px;
     }
 }
